--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ethers": "^6.10.0",
     "express": "^4.18.2",
     "mongodb": "^6.3.0"
   }
