--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "appwrite": "^13.0.1",
+    "ethers": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
