--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ethers": "^6.10.0",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "http": "^0.0.1-security",
+    "mongodb": "^6.3.0",
+    "socket.io": "^4.7.4"
   }
 }
